build-logs-failed/build-blas-hs-0.1.1.0.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - blas-hs-0.1.1.0 (lib) (first run)
 - blas-hs-0.1.1.0 (test:test) (first run)
Warning: blas-hs.cabal:105:3: The field "other-extensions" is available only
since the Cabal specification version 1.10.
Warning: blas-hs.cabal:62:3: The field "other-extensions" is available only
since the Cabal specification version 1.10.
Configuring library for blas-hs-0.1.1.0...
Preprocessing library for blas-hs-0.1.1.0...
Building library for blas-hs-0.1.1.0...
[ 1 of 15] Compiling Blas.Primitive.Types
[ 2 of 15] Compiling BlasCTypes
[ 3 of 15] Compiling FFI
[ 4 of 15] Compiling Blas.Primitive.Unsafe
[ 5 of 15] Compiling Blas.Specialized.Float.Unsafe
[ 6 of 15] Compiling Blas.Specialized.Double.Unsafe
[ 7 of 15] Compiling Blas.Specialized.ComplexFloat.Unsafe
[ 8 of 15] Compiling Blas.Specialized.ComplexDouble.Unsafe
[ 9 of 15] Compiling Blas.Generic.Unsafe

src/Blas/Generic/Unsafe.hs:61:22: warning: [GHC-39567] [-Wstar-is-type]
    Using ‘*’ (or its Unicode variant) to mean ‘Data.Kind.Type’
    relies on the StarIsType extension, which will become
    deprecated in the future.
    Suggested fix: Use ‘Type’ from ‘Data.Kind’ instead.
   |
61 |   type RealType a :: *
   |                      ^
[10 of 15] Compiling Blas.Primitive.Safe
[11 of 15] Compiling Blas.Specialized.Float.Safe
[12 of 15] Compiling Blas.Specialized.Double.Safe
[13 of 15] Compiling Blas.Specialized.ComplexFloat.Safe
[14 of 15] Compiling Blas.Specialized.ComplexDouble.Safe
[15 of 15] Compiling Blas.Generic.Safe

src/Blas/Generic/Safe.hs:60:22: warning: [GHC-39567] [-Wstar-is-type]
    Using ‘*’ (or its Unicode variant) to mean ‘Data.Kind.Type’
    relies on the StarIsType extension, which will become
    deprecated in the future.
    Suggested fix: Use ‘Type’ from ‘Data.Kind’ instead.
   |
60 |   type RealType a :: *
   |                      ^
Warning: blas-hs.cabal:105:3: The field "other-extensions" is available only
since the Cabal specification version 1.10.
Warning: blas-hs.cabal:62:3: The field "other-extensions" is available only
since the Cabal specification version 1.10.
Configuring test suite 'test' for blas-hs-0.1.1.0...
Preprocessing test suite 'test' for blas-hs-0.1.1.0...
Building test suite 'test' for blas-hs-0.1.1.0...
[1 of 2] Compiling TestUtils

tests/TestUtils.hs:37:3: error: [GHC-54721]
    ‘fail’ is not a (visible) method of class ‘Monad’
   |
37 |   fail msg     = do
   |   ^^^^
Error: [Cabal-7125]
Failed to build test:test from blas-hs-0.1.1.0.

